fix(apps-docs): removes layout shift jank in sidebar via view transitions
Persisting state via astro view transitions to remove as move of the
layout shift jank as possible. I also need to figure out a way to
preseve scroll position across navigations in the sidebar as well. But
that is for another day

--- a/apps/docs/src/layouts/docs/sidebar/components/navigation/navigation-list.css
+++ b/apps/docs/src/layouts/docs/sidebar/components/navigation/navigation-list.css
@@ -4,7 +4,12 @@
 
     &[data-state="open"] {
       animation-name: wui-fade-in, wui-collapsible-down;
-      animation-duration: var(--wui-duration-2);
+
+      /* duration is zero for now until I find a way to prevent the animation from running
+       * when a page navigation occurs. the result is some jank layout shift 
+       */
+      animation-duration: 0;
+      /* animation-duration: var(--wui-duration-2); */
       animation-timing-function: var(--wui-bezier-1);
     }
 
